--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,8 +7,33 @@
         {% block stylesheets %}{% endblock %}
 
         {% block javascripts %}{% endblock %}
+
+        <style>
+            input {
+                margin-bottom: 20px;
+            }
+
+            .btn {
+                float: right;
+                margin-left: 8px;
+            }
+        </style>
     </head>
     <body>
+    {{ include('inc/navbar.html.twig') }}
         {% block body %}{% endblock %}
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+        <script>
+            window.onload=function(){
+                var inputs=document.getElementsByTagName('input');
+                for(i=0;i<inputs.length;i++){
+                    if(inputs[i].type.match(/text/i)){
+                        inputs[i].className='form-control';
+                    }
+                }
+            }
+        </script>
     </body>
 </html>
