--- a/templates/documents/edit.html.twig
+++ b/templates/documents/edit.html.twig
@@ -3,11 +3,17 @@
 {% block title %}Edit Documents{% endblock %}
 
 {% block body %}
+    <div class="container">
     <h1>Edit Documents</h1>
 
     {{ include('documents/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('documents_index') }}">back to list</a>
-
+    </div>
     {{ include('documents/_delete_form.html.twig') }}
+
+    <a class="btn btn-primary" href="{{ path('documents_index') }}">back to list</a>
+{% endblock %}
+
+{% block javascripts %}
+    <script src="{{ asset('js/files.js') }}"></script>
 {% endblock %}
