--- a/templates/documents/new.html.twig
+++ b/templates/documents/new.html.twig
@@ -3,9 +3,11 @@
 {% block title %}New Documents{% endblock %}
 
 {% block body %}
+    <div class="container">
     <h1>Create new Documents</h1>
 
     {{ include('documents/_form.html.twig') }}
 
-    <a href="{{ path('documents_index') }}">back to list</a>
+    <a class="btn btn-info" href="{{ path('documents_index') }}">back to list</a>
+    </div>
 {% endblock %}
