--- a/templates/documents/index.html.twig
+++ b/templates/documents/index.html.twig
@@ -7,7 +7,7 @@
     <div class="container">
     <h1 style="margin-top: 3%">Documents List</h1>
 
-    <table class="table">
+    <table class="table table-hover table-border">
         <thead>
             <tr>
                 <th>Id</th>
